past tours dates added to navbar images updated with photographer logo testimonials added to featurettes nategrimmace.jpg set testimonial pic 2

--- a/index.html
+++ b/index.html
@@ -46,15 +46,25 @@
                         <li><a href="https://www.youtube.com/watch?v=qdFZyUNPiyQ">YouTube</a></li>
                         <li><a href="mailto:nathan.eubanks@gmail.com">Contact</a></li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tour Dates <span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Past Shows<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
+                                <li class="dropdown-header">Recent Shows 2014 - 2016</li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Nav header</li>
-                                <li><a href="#">Separated link</a></li>
-                                <li><a href="#">One more separated link</a></li>
+                                <li><a href="#">Topeka, KS - Breakroom</a></li>
+                                <li><a href="#">Kansas City, MO - Stanford and Sons, Kick Comedy Theater, Uptown Arts Bar</a></li>
+                                <li><a href="#">Lawrence, KS - Replay lounge, Jackpot Saloon, Jazzhaus, Oread</a></li>
+                                <li><a href="#">Fort Riley, KS - Fort Riley Military Base</a></li>
+                                <li><a href="#">Omaha, NE - Bar</a></li>
+                                <li><a href="#">Kuwait City, MO - The Live Theater, Bayt Lothan</a></li>
+                                <li><a href="#">Chicago, IL - The Shit Hole</a></li>
+                                <li><a href="#">Amsterdam, Netherlands - Drover’s Dog</a></li>
+                                <li><a href="#">Toronto, Ontario - Kitch Komedy</a></li>
+                                <li><a href="#">Johannesburg, South Africa - The Box a Goliath and Goliath Production</a></li>
+                                <li><a href="#">Paris, France - A terrible hostel open mic</a></li>
+                                <li role="separator" class="divider"></li>
+                                <!--<li class="dropdown-header">Nav header</li>-->
+                                <!--<li><a href="#">Separated link</a></li>-->
+                                <!--<li><a href="#">One more separated link</a></li>-->
                             </ul>
                         </li>
                     </ul>
@@ -80,8 +90,8 @@
             <img class="first-slide" src="images/nateback.jpg" alt="First slide">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1>Example headline.</h1>
-                    <p>Some text below headlines.</p>
+                    <h1>@nateeubanks</h1>
+                    <p>"Took up stage time." - Bar, NE</p>
                     <p><a class="btn btn-lg btn-primary" href="mailto:nathan.eubanks@gmail.com" role="button">Book me today</a></p>
                 </div>
             </div>
@@ -91,9 +101,9 @@
             <div class="container">
                 <div class="carousel-caption">
 
-                    <h1>Another example headline.</h1>
-                    <p>Subheading number two</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+                    <h1>"I though he was going to play the guitar.  Instead he told jokes."</h1>
+                    <p>- Paris Hostel Guest (probably an Australian)</p>
+                    <!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>-->
                 </div>
             </div>
         </div>
@@ -101,8 +111,8 @@
             <img class="third-slide" src="images/natemic.jpg" alt="Third slide">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1>One more for good measure.</h1>
-                    <p>More sample subheadings</p>
+                    <h1>"I thought he was Jewish.  What a let down."</h1>
+                    <p>- Everyone</p>
                     <p><a class="btn btn-lg btn-primary" href="https://drive.google.com/folderview?id=0BzgqfV9PL27hMTR6NTdqRzFiMlE&usp=sharing" target='_blank' role="button">Browse gallery</a></p>
                 </div>
             </div>
@@ -150,8 +160,10 @@
 
     <div class="row featurette">
         <div class="col-md-7">
-            <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading">Truly a funny dude<span class="text-muted"><h4><a href="https://twitter.com/robkschulte">@robkschulte</a></h4></span></h2>
+            <p class="lead">"I've seen Nate multiple times, and each time he finds a new way to make me laugh. I'm happy
+                to perform on the same stage with him, have him as a guest on the podcast, or just sit in the audience.
+                Truly a funny dude." - Rob Schulte</p>
         </div>
         <div class="col-md-5">
             <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/natesmile.jpg" alt="Generic placeholder image">
@@ -162,27 +174,31 @@
 
     <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-            <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading">Nate Freakin' Eubanks<span class="text-muted"><h4><a href="https://twitter.com/Pinklepus">@Pinklepus</a></h4></span></h2>
+            <p class="lead">"Nate Eubanks is one of the funniest people I know. When you've been doing comedy for as
+                long as I have, you hear a lot of jokes. You want to know how funny Nate is? I think about one of Nate's
+                jokes at least once a week. You want proof? Nate asked me to help him with this website thing and with
+                full intention to help him, I totally forgot. Just straight up forgot. THEN I started thinking about cats,
+                and you know who has the best joke about cats? You bet your britches it's Nate freakin' Eubanks." - Tristan Newell</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/natesmile.jpg" alt="Generic placeholder image">
+            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/nategrimmace.jpg" alt="Generic placeholder image">
         </div>
     </div>
 
     <hr class="featurette-divider">
 
-    <div class="row featurette">
-        <div class="col-md-7">
-            <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-        <div class="col-md-5">
-            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/natesmile.jpg" alt="Generic placeholder image">
-        </div>
-    </div>
+    <!--<div class="row featurette">-->
+        <!--<div class="col-md-7">-->
+            <!--<h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>-->
+            <!--<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>-->
+        <!--</div>-->
+        <!--<div class="col-md-5">-->
+            <!--<img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/natesmile.jpg" alt="Generic placeholder image">-->
+        <!--</div>-->
+    <!--</div>-->
 
-    <hr class="featurette-divider">
+    <!--<hr class="featurette-divider">-->
 
     <!-- /END THE FEATURETTES -->
 
@@ -190,7 +206,7 @@
     <!-- FOOTER -->
     <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2015 Brian Thomas &middot;  Need a website? <a href="http://www.moneykatz.com">www.moneykatz.com</a> &middot; <span style="text-align:center;"</span> or <a href="mailto:brianraythomas@gmail.com?Subject=Website Interest" target="_top">Email Me</a></p>
+        <p><a href="http://www.moneykatz.com/contact.html">&copy; 2015 Brian Thomas &middot;</a> <span style="text-align:center;"</span></p>
     </footer>
 
 </div><!-- /.container -->
