cleaned up some validation errors removed <span> from footer reordered so <h4> is not a child of <span>

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
     <div class="row featurette">
         <div class="col-md-7">
-            <h2 class="featurette-heading">Truly a funny dude<span class="text-muted"><h4><a href="https://twitter.com/robkschulte">@robkschulte</a></h4></span></h2>
+            <h2 class="featurette-heading">Truly a funny dude</h2><h4><span class="text-muted"><a href="https://twitter.com/robkschulte">@robkschulte</a></span></h4>
             <p class="lead">"I've seen Nate multiple times, and each time he finds a new way to make me laugh. I'm happy
                 to perform on the same stage with him, have him as a guest on the podcast, or just sit in the audience.
                 Truly a funny dude." - Rob Schulte</p>
@@ -174,7 +174,7 @@
 
     <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-            <h2 class="featurette-heading">Nate Freakin' Eubanks<span class="text-muted"><h4><a href="https://twitter.com/Pinklepus">@Pinklepus</a></h4></span></h2>
+            <h2 class="featurette-heading">Nate Freakin' Eubanks</h2><h4><span class="text-muted"><a href="https://twitter.com/Pinklepus">@Pinklepus</a></span></h4>
             <p class="lead">"Nate Eubanks is one of the funniest people I know. When you've been doing comedy for as
                 long as I have, you hear a lot of jokes. You want to know how funny Nate is? I think about one of Nate's
                 jokes at least once a week. You want proof? Nate asked me to help him with this website thing and with
@@ -206,7 +206,7 @@
     <!-- FOOTER -->
     <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p><a href="http://www.moneykatz.com/contact.html">&copy; 2015 Brian Thomas &middot;</a> <span style="text-align:center;"</span></p>
+        <p><a href="http://www.moneykatz.com/contact.html">&copy; 2015 Brian Thomas &middot;</a></p>
     </footer>
 
 </div><!-- /.container -->
