--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
 </div><!-- /.carousel -->
 
 
-<!-- Twitter Timeline and Video -->
+<!-- Twitter TimeLine and Video -->
 <!-- ================================================== -->
 
 <div class="row" >
-    <div class="col-sm-3 col-md-3">
+    <div class="col-sm-3 col-md-3"> <!-- height attr is not HTML5 compliant, but style tag doesn't work -->
         <a class="twitter-timeline" href="https://twitter.com/NateEubanks" data-widget-id="649626255378247680" height="500">Tweets by @NateEubanks</a>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.ocation)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </div>
     <!-- 16:9 aspect ratio video-->
     <div class="col-sm-15 col-md-9">
