@media max-width 767px:
-- #myCarousel now pushes down 50px and adds a bottom margin of 60px
-- carousel caption h1 reduced font size

--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@
             <img class="second-slide" src="images/natetalk.jpg" alt="Nate talking into mic">
             <div class="container">
                 <div class="carousel-caption">
-
                     <h1>"I though he was going to play the guitar.  Instead he told jokes."</h1>
                     <p>- Paris Hostel Guest (probably an Australian)</p>
                     <!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>-->
@@ -115,7 +114,8 @@
                 <div class="carousel-caption">
                     <h1>"I thought he was Jewish.  What a let down."</h1>
                     <p>- Everyone</p>
-                    <p><a class="btn btn-lg btn-primary" href="https://drive.google.com/folderview?id=0BzgqfV9PL27hMTR6NTdqRzFiMlE&usp=sharing" target='_blank' role="button">Browse gallery</a></p>
+                    <p><a class="btn btn-lg btn-primary" href="https://drive.google.com/folderview?id=0BzgqfV9PL27hMTR6NTdqRzFiMlE&usp=sharing"
+                          target='_blank' role="button">Browse gallery</a></p>
                 </div>
             </div>
         </div>
@@ -152,7 +152,6 @@
 <!-- Wrap the rest of the page in another container to center all the content. -->
 
 <div class="container marketing">
-
 
     <!-- START THE FEATURETTES -->
 
@@ -191,10 +190,12 @@
     <!--<div class="row featurette">-->
         <!--<div class="col-md-7">-->
             <!--<h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>-->
-            <!--<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>-->
+            <!--<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
+            euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>-->
         <!--</div>-->
         <!--<div class="col-md-5">-->
-            <!--<img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/natesmile.jpg" alt="Generic placeholder image">-->
+            <!--<img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto"
+            src="images/natesmile.jpg" alt="Generic placeholder image">-->
         <!--</div>-->
     <!--</div>-->
 
@@ -204,9 +205,9 @@
 
 
     <!-- FOOTER -->
-    <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p><a href="http://www.moneykatz.com/contact.html">&copy; 2015 Brian Thomas &middot;</a></p>
+    <footer class="footer">
+        <p><a href="http://www.moneykatz.com/contact.html">&copy; 2015 Brian Thomas &middot;</a>
+            <span class="pull-right"><a href="#">Back to top</a></span></p>
     </footer>
 
 </div><!-- /.container -->
