added past show to dropdown fixed typo in twitter embed code

--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
                                 <li><a href="#">Lawrence, KS - Replay lounge, Jackpot Saloon, Jazzhaus, Oread</a></li>
                                 <li><a href="#">Fort Riley, KS - Fort Riley Military Base</a></li>
                                 <li><a href="#">Omaha, NE - Bar</a></li>
-                                <li><a href="#">Kuwait City, MO - The Live Theater, Bayt Lothan</a></li>
+                                <li><a href="#">Kuwait City, Kuwait - The Live Theater, Bayt Lothan</a></li>
                                 <li><a href="#">Chicago, IL - The Shit Hole</a></li>
                                 <li><a href="#">Amsterdam, Netherlands - Drover’s Dog</a></li>
                                 <li><a href="#">Toronto, Ontario - Kitch Komedy</a></li>
                                 <li><a href="#">Johannesburg, South Africa - The Box a Goliath and Goliath Production</a></li>
                                 <li><a href="#">Paris, France - A terrible hostel open mic</a></li>
+                                <li><a href="#">Doha, Qatar - Jazz at the Lincoln Center at St. Regis</a></li>
                                 <li role="separator" class="divider"></li>
                                 <!--<li class="dropdown-header">Nav header</li>-->
                                 <!--<li><a href="#">Separated link</a></li>-->
@@ -112,7 +113,7 @@
             <img class="third-slide" src="images/natemic.jpg" alt="Nate with crazy hair on stage">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1>"I thought he was Jewish.  What a let down."</h1>
+                    <h1>"Well over 100 twitter followers"</h1>
                     <p>- Everyone</p>
                     <p><a class="btn btn-lg btn-primary" href="https://drive.google.com/folderview?id=0BzgqfV9PL27hMTR6NTdqRzFiMlE&usp=sharing"
                           target='_blank' role="button">Browse gallery</a></p>
@@ -137,7 +138,7 @@
 <div class="row">
     <div class="col-sm-3 col-md-3"> <!-- height attr is not HTML5 compliant but functions; replacing with style tag doesn't work -->
         <a class="twitter-timeline" href="https://twitter.com/NateEubanks" data-widget-id="649626255378247680" height="500">Tweets by @NateEubanks</a>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.ocation)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </div>
     <!-- 16:9 aspect ratio video-->
     <div class="col-sm-15 col-md-9">
