carousel caption grammar

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <img class="third-slide" src="images/natemic.jpg" alt="Nate with crazy hair on stage">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1>"Well over 100 twitter followers"</h1>
+                    <h1>"Well over 100 twitter followers."</h1>
                     <p>- Everyone</p>
                     <p><a class="btn btn-lg btn-primary" href="https://drive.google.com/folderview?id=0BzgqfV9PL27hMTR6NTdqRzFiMlE&usp=sharing"
                           target='_blank' role="button">Browse gallery</a></p>
