updated list of past shows

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <ul class="dropdown-menu">
                                 <li class="dropdown-header">Recent Shows 2014 - 2016</li>
                                 <li role="separator" class="divider"></li>
-                                <li><a href="#">Topeka, KS - Breakroom</a></li>
+                                <li><a href="http://www.breakroomdowntown.com/" target = _blank>Topeka, KS - Breakroom</a></li>
                                 <li><a href="#">Kansas City, MO - Stanford and Sons, Kick Comedy Theater, Uptown Arts Bar</a></li>
                                 <li><a href="#">Lawrence, KS - Replay lounge, Jackpot Saloon, Jazzhaus, Oread</a></li>
                                 <li><a href="#">Fort Riley, KS - Fort Riley Military Base</a></li>
@@ -64,6 +64,7 @@
                                 <li><a href="#">Johannesburg, South Africa - The Box a Goliath and Goliath Production</a></li>
                                 <li><a href="#">Paris, France - A terrible hostel open mic</a></li>
                                 <li><a href="#">Doha, Qatar - Jazz at the Lincoln Center at St. Regis</a></li>
+                                <li><a href="http://thedomainhotels.com/restaurant_1/txoko.en.html" target = _blank>Manama, Bahrain - Txoko Lounge</a></li>
                                 <li role="separator" class="divider"></li>
                                 <!--<li class="dropdown-header">Nav header</li>-->
                                 <!--<li><a href="#">Separated link</a></li>-->
