new head shots on testimonials page

--- a/testimonials.html
+++ b/testimonials.html
@@ -101,7 +101,7 @@
                 Truly a funny dude." - Rob Schulte</p>
         </div>
         <div class="col-md-5">
-            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/natesmile.jpg" alt="Image of Nate smiling">
+            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/head1.jpg" alt="Image of Nate smiling">
         </div>
     </div>
 
@@ -117,7 +117,7 @@
                 and you know who has the best joke about cats? You bet your britches it's Nate freakin' Eubanks." - Tristan Newell</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/nategrimmace.jpg" alt="Image of Nate frowning">
+            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/head2.jpg" alt="Image of Nate frowning">
         </div>
     </div>
 
