switched from default api key

--- a/testimonials.html
+++ b/testimonials.html
@@ -202,9 +202,8 @@
 <script type="text/javascript">
     $(function () {
         $('#gcf-nate-events').gCalFlow({
-            // calid: 'ask.edu.kw_2d36343231363737342d363134%40resource.calendar.google.com',
             calid: 'j4ttdotndrai1e6grt7bp7i6ko@group.calendar.google.com',
-            // apikey: 'AIzaSyC8z-yio3AXTmOXlgt8zQam57uSD8tMObY',
+            apikey: 'AIzaSyC8z-yio3AXTmOXlgt8zQam57uSD8tMObY',
             maxitem: 15,
 	        auto_scroll: false,
             no_items_html: 'No Upcoming Shows',
