--- a/testimonials.html
+++ b/testimonials.html
@@ -88,7 +88,7 @@
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle ="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Events<span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle ="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Shows<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li>
                                     <div id="gcf-nate-events">
