bio to index page, new head shot

--- a/index.html
+++ b/index.html
@@ -219,15 +219,15 @@
 
     <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-            <h2 class="featurette-heading">Nate Freakin' Eubanks</h2><h4><span class="text-muted"><a href="https://twitter.com/Pinklepus">@Pinklepus</a></span></h4>
-            <p class="lead">"Nate Eubanks is one of the funniest people I know. When you've been doing comedy for as
-                long as I have, you hear a lot of jokes. You want to know how funny Nate is? I think about one of Nate's
-                jokes at least once a week. You want proof? Nate asked me to help him with this website thing and with
-                full intention to help him, I totally forgot. Just straight up forgot. THEN I started thinking about cats,
-                and you know who has the best joke about cats? You bet your britches it's Nate freakin' Eubanks." - Tristan Newell</p>
+            <h2 class="featurette-heading">Nate Eubanks</h2><h4><span class="text-muted"><a href="https://twitter.com/NateEubanks">@NateEubanks</a></span></h4>
+            <p class="lead">"Nate Eubanks grew up in rural Northeast Kansas and later worked internationally
+                in Paraguay and Kuwait. He has performed stand up comedy in eight countries (USA, Canada,
+                Kuwait, Qatar, Bahrain, South Africa, Netherlands, and Australia) and through the midwest
+                USA. From 5 star hotels in Qatar, art galleries in Johannesburg, garages in Chicago, and
+                finally clubs in Sydney, Nate brings the laughs to every audience.</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/nategrimmace.jpg" alt="Image of Nate frowning">
+            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/head2.jpg" alt="Image of Nate frowning">
         </div>
     </div>
 
