--- a/testimonials.html
+++ b/testimonials.html
@@ -134,12 +134,10 @@
 
     <div class="row featurette">
         <div class="col-md-7">
-            <h2 class="featurette-heading">Nate Eubanks</h2><h4><span class="text-muted"><a href="https://twitter.com/NateEubanks">@NateEubanks</a></span></h4>
-            <p class="lead">Nate Eubanks grew up in rural Northeast Kansas and later worked internationally
-                in Paraguay and Kuwait. He has performed stand up comedy in eight countries (USA, Canada,
-                Kuwait, Qatar, Bahrain, South Africa, Netherlands, and Australia) and through the midwest
-                USA. From 5 star hotels in Qatar, art galleries in Johannesburg, garages in Chicago, and
-                finally clubs in Sydney, Nate brings the laughs to every audience.</p>
+            <h2 class="featurette-heading">Truly a funny dude</h2><h4><span class="text-muted"><a href="https://twitter.com/robkschulte">@robkschulte</a></span></h4>
+            <p class="lead">"I've seen Nate multiple times, and each time he finds a new way to make me laugh. I'm happy
+                to perform on the same stage with him, have him as a guest on the podcast, or just sit in the audience.
+                Truly a funny dude." - Rob Schulte</p>
         </div>
         <div class="col-md-5">
             <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/head1.jpg" alt="Image of Nate smiling">
