--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
             <h2 class="featurette-heading">Nate Eubanks</h2><h4><span class="text-muted"><a href="https://twitter.com/NateEubanks">@NateEubanks</a></span></h4>
-            <p class="lead">"Nate Eubanks grew up in rural Northeast Kansas and later worked internationally
+            <p class="lead">Nate Eubanks grew up in rural Northeast Kansas and later worked internationally
                 in Paraguay and Kuwait. He has performed stand up comedy in eight countries (USA, Canada,
                 Kuwait, Qatar, Bahrain, South Africa, Netherlands, and Australia) and through the midwest
                 USA. From 5 star hotels in Qatar, art galleries in Johannesburg, garages in Chicago, and
