--- a/index.html
+++ b/index.html
@@ -27,15 +27,9 @@
     <link href="jquery-gcal-flow-3.0.1/jquery.gcal_flow.css" rel="stylesheet" type="text/css">
 
     <style>
-        #gcf-nate-events {
-            height: auto;
-            margin-bottom: 0;
-            padding-bottom: 5px;
-        }
-        .gcf-item-container-block {
-            padding-left: 5px;
-            width: auto;
-        }
+        /*.gCalFlow {
+            background-color: inherit;
+        }*/
     </style>
 </head>
 
